[package]
name = "yatorrent"
version = "0.1.0"
edition = "2024"
description = "Yet Another Torrent Client"

[dependencies]
sha1 = "0.10.6"
reqwest = "0.13.2"
tokio = { version = "1.50.0", features = ["full"] }
assert_matches = "1.5"
rand = "0.10.0"
log = "0.4"
env_logger = "0.11.9"
size = "0.5.0"
trait-variant = "0.1.2"
clap = { version = "4.5.60", features = ["derive", "env"] }
num-bigint = "0.4.6"
derivative = "2.2.0"
anyhow = "1.0.102"
rlimit = "0.10.2"
url = "2.5.8"
percent-encoding = "2.3.2"
hex = "0.4.3"
thiserror = "2.0.18"
colored = "3.1.1"
